--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -11,7 +11,9 @@ body {
   max-width: 1200px;
   margin: auto;
   padding: 20px;
+  height: 115vh;
   text-align: center;
+
 }
 
 /* אזור הכותרת הראשית (Hero Section) */
@@ -39,6 +41,7 @@ body {
   background-color: #229cff00;
   color: rgb(255, 255, 255);
   padding: 12px 20px;
+  height: 150vh;
   border: none;
   font-size: 18px;
   cursor: pointer;
@@ -48,7 +51,7 @@ body {
 }
 
 .future-flights-button{
-  background-color: #229cff;
+  background-color: #11558e;
   color: rgb(255, 255, 255);
   padding: 12px 20px;
   border: none;
@@ -91,6 +94,7 @@ body {
 .flight-card-container {
   display: flex;
   flex-wrap: wrap;
+  height: 115vh;
   justify-content: center;
   gap: 20px;
   margin-top: 20px;
@@ -144,6 +148,24 @@ body {
 
 .book-button:hover {
   background-color: #218838;
+  transform: scale(1.05);
+}
+
+.future-flights book-button {
+  background-color: #ed9406;
+  color: white;
+  padding: 10px;
+  border: none;
+  font-size: 16px;
+  cursor: pointer;
+  width: 100%;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+  margin-top: 10px;
+}
+
+.future-flights book-button:hover {
+  background-color: #00b3b3;
   transform: scale(1.05);
 }
 
@@ -216,5 +238,12 @@ body {
     font-size: 24px;
     color: white;
     cursor: pointer;
+  }
+
+  html, body {
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto; /* מאפשר גלילה אנכית */
+    scroll-behavior: smooth;
   }
 }
