--- a/src/app/components/home/last-minute-flights/last-minute-flights.component.html
+++ b/src/app/components/home/last-minute-flights/last-minute-flights.component.html
@@ -15,7 +15,8 @@
         <td>{{ flight.flightNumber }}</td>
         <td>{{ flight.origin }}</td>
         <td>{{ flight.destination }}</td>
-        <button (click)="openEditDialog(flight)">Book Edit</button>
+        <button mat-raised-button color="primary"
+          (click)="openBookingDialog(flight)">Book</button>
       </tr>
     </tbody>
   </table>
