--- a/src/app/components/user/my-orders/my-orders.component.css
+++ b/src/app/components/user/my-orders/my-orders.component.css
@@ -1,6 +1,7 @@
 .my-orders-container {
   max-width: 1200px;
   margin: 20px auto;
+  height: 115vh;
   padding: 20px;
   font-family: 'Roboto', sans-serif;
 }
@@ -40,7 +41,6 @@ h2, h3 {
   width: 160px;
   height: 100px;
   object-fit: cover;
-  border-radius: 5px;
 }
 
 /* Button Styling */
@@ -49,7 +49,6 @@ h2, h3 {
   color: white;
   padding: 8px 12px;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
@@ -63,7 +62,6 @@ h2, h3 {
   color: white;
   padding: 10px 15px;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   display: block;
@@ -88,14 +86,22 @@ h2, h3 {
     align-items: center;
     justify-content: center;
     background-color: #fff;
-    border-radius: 5px;
     overflow: hidden;
   }
 
   .order-image {
     max-width: 300%;
     max-height: 300%;
-    object-fit: cover; /* יוודא שהתמונה מותאמת יפה */
+    object-fit: cover;
   }
+}
+.custom-dialog-container .mat-mdc-dialog-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.mat-mdc-dialog-container {
+  border-radius: 8px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
