--- a/src/app/components/user/booking-dialog/booking-dialog.component.html
+++ b/src/app/components/user/booking-dialog/booking-dialog.component.html
@@ -90,7 +90,7 @@
     <div class="image-container">
       <img [src]="selectedFlight.image" alt="Destination Image" class="order-image" />
     </div>
-    <button mat-raised-button color="primary" (click)="closeDialog()">Close</button>
+    <button mat-raised-button color="primary" (click)="closeDialog()">Save Booking</button>
     <button mat-raised-button color="warn" (click)="cancelBooking()">Cancel Booking</button>
   </div>
 </mat-dialog-content>
